--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,4 +34,4 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
       - name: Deploy Docker to Google Cloud
-        run: gcloud run deploy dynamic-reputation-prototype --image docker.io/jtravan3/dynamic-reputation-prototype:latest
+        run: gcloud run deploy dynamic-reputation-prototype --image docker.io/jtravan3/dynamic-reputation-prototype:latest --min-instances 5 --platform gke --cluster dynamic-reputation-cluster
