--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
   deploy:
 
     runs-on: ubuntu-latest
+    needs: build
 
     steps:
       - name: Set up Cloud SDK
@@ -34,4 +35,4 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
       - name: Deploy Docker to Google Cloud
-        run: gcloud run deploy dynamic-reputation-prototype --image docker.io/jtravan3/dynamic-reputation-prototype:latest --min-instances 5 --platform gke --cluster dynamic-reputation-cluster --cluster-location us-east1
+        run: gcloud run deploy dynamic-reputation-prototype --image docker.io/jtravan3/dynamic-reputation-prototype:latest --min-instances 5 --platform managed --region us-east1
