--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Build Image with JIB
         run: ./mvnw compile jib:build
         env:
-          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-          DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          GCLOUD_SERVICE_KEY: ${{ secrets.GCP_SA_KEY }}
+          GOOGLE_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   deploy:
 
     runs-on: ubuntu-latest
@@ -35,4 +35,4 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
       - name: Deploy Docker to Google Cloud
-        run: gcloud run deploy dynamic-reputation-prototype --image docker.io/jtravan3/dynamic-reputation-prototype:latest --min-instances 5 --platform managed --region us-east1
+        run: gcloud run deploy dynamic-reputation-prototype --image gcr.io/plenary-shade-228414/dynamic-reputation-prototype:latest --min-instances 5 --platform managed --region us-east1
