--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
                 <configuration>
                     <to>
                         <image>gcr.io/plenary-shade-228414/dynamic-reputation-prototype</image>
+                        <credHelper>gcr</credHelper>
                         <tags>
                             <tag>1.0.0</tag>
                             <tag>latest</tag>
