--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,12 +17,13 @@ jobs:
         run: ./mvnw -B compile --file pom.xml
       - name: Test with Maven
         run: ./mvnw -B test --file pom.xml
-      - name: Build Image with JIB
+      - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@master
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
+      - name: Build Image with JIB
         run: ./mvnw compile jib:build
 
   deploy:
