--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.mvc.servlet.load-on-startup=1
 
 ## Application Info ##
 spring.application.name=dynamic-reputation-prototype
+info.app.name=dynamic-reputation-prototype
+info.app.description=Dynamic Reputation Prototype
+info.app.version=1.0.0
 
 # Disable before delivering
 #spring.profiles.active=local
