changed db config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,10 @@ info.app.name=dynamic-reputation-prototype
 info.app.description=Dynamic Reputation Prototype
 info.app.version=1.0.0
 
+spring.datasource.username=postgres
+spring.datasource.password=cOrIKhIw84s20d49yr
+spring.datasource.url=jdbc:postgresql://104.196.196.84:5432/postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 # Disable before delivering
 #spring.profiles.active=local
