trying something else

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,10 @@ info.app.version=1.0.0
 
 spring.datasource.username=postgres
 spring.datasource.password=cOrIKhIw84s20d49yr
-spring.datasource.url=jdbc:postgresql://104.196.196.84/postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://postgres
+spring.datasource.hikari.data-source-properties.ipTypes=PUBLIC,PRIVATE
+spring.datasource.hikari.data-source-properties.socketFactory=com.google.cloud.sql.postgres.SocketFactory
+spring.datasource.hikari.data-source-properties.cloudSqlInstance=plenary-shade-228414:us-east1:dynamic-reputation-database
 
 # Disable before delivering
 #spring.profiles.active=local
