--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ info.app.name=dynamic-reputation-prototype
 info.app.description=Dynamic Reputation Prototype
 info.app.version=1.0.0
 
-spring.datasource.username=postgres
-spring.datasource.password=cOrIKhIw84s20d49yr
-spring.datasource.url=jdbc:postgresql://postgres
+spring.datasource.hikari.username=postgres
+spring.datasource.hikari.password=cOrIKhIw84s20d49yr
+spring.datasource.hikari.jdbc-url=jdbc:postgresql:///postgres
 spring.datasource.hikari.data-source-properties.ipTypes=PUBLIC,PRIVATE
 spring.datasource.hikari.data-source-properties.socketFactory=com.google.cloud.sql.postgres.SocketFactory
 spring.datasource.hikari.data-source-properties.cloudSqlInstance=plenary-shade-228414:us-east1:dynamic-reputation-database
