--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.username=postgres
 spring.datasource.hikari.password=cOrIKhIw84s20d49yr
 spring.datasource.hikari.jdbc-url=jdbc:postgresql:///postgres
-spring.datasource.hikari.data-source-class-name=org.postgresql.Driver
+#spring.datasource.hikari.data-source-class-name=org.postgresql.Driver
 spring.datasource.hikari.data-source-properties.ipTypes=PUBLIC,PRIVATE
 spring.datasource.hikari.data-source-properties.socketFactory=com.google.cloud.sql.postgres.SocketFactory
 spring.datasource.hikari.data-source-properties.cloudSqlInstance=plenary-shade-228414:us-east1:dynamic-reputation-database
