--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   dynamic-reputation-prototype:
-    image: docker.io/jtravan3/dynamic-reputation-prototype:latest
+    image: gcr.io/plenary-shade-228414/dynamic-reputation-prototype:latest
     container_name: dynamic-reputation-prototype
     ports:
       - 5000:5000
