--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,18 +7,17 @@ info.app.name=dynamic-reputation-prototype
 info.app.description=Dynamic Reputation Prototype
 info.app.version=1.0.0
 
-spring.datasource.username=postgres
-spring.datasource.password=cOrIKhIw84s20d49yr
-spring.datasource.url=jdbc:postgresql:///postgres
+spring.datasource.username=doadmin
+spring.datasource.password=i5tey1jdwvds0k6r
+spring.datasource.url=jdbc:postgresql://dynamic-reputation-database-do-user-4683876-0.b.db.ondigitalocean.com:25060/defaultdb?sslmode=require&sslrootcert=ca-certificate.crt
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.hikari.username=postgres
-spring.datasource.hikari.password=cOrIKhIw84s20d49yr
-spring.datasource.hikari.jdbc-url=jdbc:postgresql:///postgres
+
+spring.datasource.hikari.username=doadmin
+spring.datasource.hikari.password=i5tey1jdwvds0k6r
+spring.datasource.hikari.jdbc-url=jdbc:postgresql://dynamic-reputation-database-do-user-4683876-0.b.db.ondigitalocean.com:25060/defaultdb?sslmode=require&sslrootcert=ca-certificate.crt
 #spring.datasource.hikari.data-source-class-name=org.postgresql.Driver
 spring.datasource.hikari.data-source-properties.ipTypes=PUBLIC,PRIVATE
-spring.datasource.hikari.data-source-properties.socketFactory=com.google.cloud.sql.postgres.SocketFactory
-spring.datasource.hikari.data-source-properties.cloudSqlInstance=plenary-shade-228414:us-east1:dynamic-reputation-database
 
 # Disable before delivering
 #spring.profiles.active=local
