--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,8 @@ jobs:
 #          export_default_credentials: true
       - name: Build with Maven
         run: ./mvnw -B compile --file pom.xml
-      - name: Test with Maven
-        run: ./mvnw -B test --file pom.xml
+#      - name: Test with Maven
+#        run: ./mvnw -B test --file pom.xml
 #      - name: Configure Docker
 #        run: gcloud auth configure-docker
       - name: Build Image with JIB
