--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>2.6.0</version>
+                <version>2.8.0</version>
                 <configuration>
                     <to>
                         <image>docker.io/jtravan3/dynamic-reputation-prototype</image>
@@ -129,6 +129,7 @@
                         <ports>
                             <port>5000</port>
                         </ports>
+                        <format>OCI</format>
                     </container>
                 </configuration>
             </plugin>
