--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,7 @@
                         </jvmFlags>
                         <ports>
                             <port>5000</port>
+                            <port>8080</port>
                         </ports>
                         <format>OCI</format>
                     </container>
