--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,37 +13,25 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-#      - name: Set up Cloud SDK
-#        uses: google-github-actions/setup-gcloud@master
-#        with:
-#          project_id: ${{ secrets.GCP_PROJECT_ID }}
-#          service_account_key: ${{ secrets.GCP_SA_KEY }}
-#          export_default_credentials: true
       - name: Build with Maven
         run: ./mvnw -B compile --file pom.xml
-#      - name: Test with Maven
-#        run: ./mvnw -B test --file pom.xml
-#      - name: Configure Docker
-#        run: gcloud auth configure-docker
+      - name: Test with Maven
+        run: ./mvnw -B test --file pom.xml
       - name: Build Image with JIB
         run: ./mvnw compile jib:build
         env:
           DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
           DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-#  deploy:
-#
-#    runs-on: ubuntu-latest
-#    needs: build
-#
-#    steps:
-#      - name: Set up Cloud SDK
-#        uses: google-github-actions/setup-gcloud@master
-#        with:
-#          project_id: ${{ secrets.GCP_PROJECT_ID }}
-#          service_account_key: ${{ secrets.GCP_SA_KEY }}
-#          export_default_credentials: true
-#      - name: Install Beta Components
-#        run: gcloud components install beta --quiet
-#      - name: Deploy Docker to Google Cloud
-#        run: gcloud beta run deploy dynamic-reputation-prototype --image gcr.io/plenary-shade-228414/dynamic-reputation-prototype:latest --platform managed --region us-east1 --port 5000 --allow-unauthenticated --vpc-egress all --vpc-connector cloudrunsubnetconnector --quiet --add-cloudsql-instances plenary-shade-228414:us-east1:dynamic-reputation-database
+  deploy:
+
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+      - name: Deploy App to Digital Ocean
+        run: doctl apps create-deployment 03239d83-46b9-4117-b156-0dc2af00ed7e
