--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ info.app.name=dynamic-reputation-prototype
 info.app.description=Dynamic Reputation Prototype
 info.app.version=1.0.0
 
+sentry.dsn=https://4f6bca2dfa7d4bf79a134b8ae119e966@o569284.ingest.sentry.io/5714878
+
 spring.datasource.username=doadmin
 spring.datasource.password=i5tey1jdwvds0k6r
 spring.datasource.url=jdbc:postgresql://dynamic-reputation-database-do-user-4683876-0.b.db.ondigitalocean.com:25060/defaultdb?sslmode=require&sslrootcert=ca-certificate.crt
