Trying to automate app creation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,5 +33,7 @@ jobs:
         uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-      - name: Deploy App to Digital Ocean
-        run: doctl apps create-deployment 03239d83-46b9-4117-b156-0dc2af00ed7e --force-rebuild
+      - name: Delete existing App
+        run: doctl apps delete 03239d83-46b9-4117-b156-0dc2af00ed7e
+      - name: Create new App
+        run: doctl apps create --spec ./doctl/spec.yml
