--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,5 +36,4 @@ jobs:
 #      - name: Delete existing App
 #        run: doctl apps delete 03239d83-46b9-4117-b156-0dc2af00ed7e --force
       - name: Create new App
-        working-directory: doctl
-        run: doctl apps create --spec spec.yml
+        run: doctl apps create --spec doctl/spec.yml
