--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,4 +34,4 @@ jobs:
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
       - name: Update App
-        run: doctl apps update 57c577da-7651-4d4c-ab42-447460a8eb60 --spec spec.yml
+        run: doctl apps update 57c577da-7651-4d4c-ab42-447460a8eb60 --spec $GITHUB_WORKSPACE/spec.yml
