--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@master
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -29,11 +30,11 @@ jobs:
     needs: build
 
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@master
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-      - name: Playing
-        run: ls -a
       - name: Update App
-        run: doctl apps update 57c577da-7651-4d4c-ab42-447460a8eb60 --spec /home/runner/work/dynamic-reputation-prototype/config/spec.yaml
+        run: doctl apps update 57c577da-7651-4d4c-ab42-447460a8eb60 --spec $GITHUB_WORKSPACE/config/spec.yaml
