--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,9 @@ spring.mvc.servlet.load-on-startup=1
 spring.application.name=dynamic-reputation-prototype
 info.app.name=dynamic-reputation-prototype
 info.app.description=Dynamic Reputation Prototype
-info.app.version=1.0.7
+info.app.version=1.0.8
+
+drp.use-case=Use Case 3
 
 sentry.dsn=https://4f6bca2dfa7d4bf79a134b8ae119e966@o569284.ingest.sentry.io/5714878
 
